# my_convolution

./: .create_database.sh.swp  .gitignore
Qt/examples/HelloWorld/: CMakeLists.txt  helloworld.cpp  helloworld.h  helloworld.ui  main.cpp
Qt/examples/QMLTest/: CMakeLists 2.txt  CMakeLists.txt  calculatorbackend.cpp  calculatorbackend.h  converterbackend.cpp  converterbackend.h  helloworldbackend.cpp  helloworldbackend.h  main.cpp  main.qml
Qt/myConvolution/: ButtonBackground.qml  CMakeLists.txt  ConnectTab.qml  Doxyfile  GenTab.qml  ListViewItemBackground.qml  TextFieldBackground.qml  abstractnoisebackend.cpp  abstractnoisebackend.h  backend.cpp  backend.h  databaseconnection.cpp  databaseconnection.h  databasemanager.cpp  databasemanager.h  databaseworker.cpp  databaseworker.h  generatorbackend.cpp  generatorbackend.h  loadgenerator.cpp  loadgenerator.h  main.cpp  main.qml  noise.cpp  noise.h  normalnoisebackend.cpp  normalnoisebackend.h  peak.cpp  peak.h  peaklistmodel.cpp  peaklistmodel.h  postlistmodel.cpp  postlistmodel.h  qml.qrc  uniformnoisebackend.cpp  uniformnoisebackend.h  utils.cpp  utils.h
Qt/myConvolution/docs/: class-diagram.html
db_scripts/: create_database.sh  create_database.sql  drop_database.sh  drop_database.sql
stepik_tasks/: 1.5.1.cpp  1.6.1.cpp  1.8.1.cpp  1.8.2.cpp  1.8.3.cpp  1.8.4.cpp  1.8.5.cpp  1.8.6.cpp  2.2.1.cpp  2.2.2.cpp  2.3.1.cpp  2.4.1.cpp  2.4.2.cpp  2.4.3.cpp  2.6.1.cpp  2.6.2.cpp  2.7.1.cpp  2.7.2.cpp  3.3.1.cpp  3.3.2.cpp  3.3.3.cpp  3.5.1.cpp  3.7.1.cpp  3.7.2.cpp  4.1.1.cpp  4.1.2.cpp
(+3 files in other folders)
